--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,45 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+
+# Ignore Precompiled Assets
+/public/assets
+
+# Ignore SublimeText data files
+*.sublime-project
+*.sublime-workspace
+
+# Ignore Redis database files
+*.rdb
+
+# added by GitSavvy
+/dump.rdb
+
+# added by GitSavvy
+notes/*
+
+# macOS file system artifacts
+
+*.DS_Store
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+# Thumbnails
+._*
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
