--- a/client/bower.json
+++ b/client/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "materialize": "^0.98.0",
-    "dynatable": "^0.3.1"
+    "dynatable": "^0.3.1",
+    "datatables.net": "^2.1.1"
   }
 }
