--- a/client/bower.json
+++ b/client/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "materialize": "^0.98.0",
     "dynatable": "^0.3.1",
-    "datatables.net": "^2.1.1"
+    "datatables.net": "^2.1.1",
+    "jquery-serialize-object": "^2.5.0"
   }
 }
