--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,15 @@
   "author": "",
   "private": true,
   "dependencies": {
+    "babel-loader": "6.3.1",
     "bootstrap-vue": "^0.7.1",
     "devour-client": "^1.4.1",
     "node-sass": "^4.5.0",
-    "nuxt": "latest",
+    "nuxt": "0.9.6",
     "sass-loader": "^6.0.0",
-    "vue-awesome": "^2.1.0",
-    "vuex": "^2.1.2"
+    "vue-awesome": "2.1.0",
+    "vue-loader": "10.3.0",
+    "vuex": "2.1.2"
   },
   "scripts": {
     "dev": "nuxt",
