--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "babel-loader": "6.3.1",
     "bootstrap-vue": "^0.9.2",
     "devour-client": "^1.4.1",
+    "format": "0.2.2",
     "inflection": "^1.12.0",
     "node-sass": "^4.5.0",
     "nuxt": "0.9.6",
