--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.5.0",
     "nuxt": "0.9.6",
     "sass-loader": "^6.0.0",
+    "underscore": "^1.8.3",
     "vue-awesome": "2.1.0",
     "vue-loader": "10.3.0",
     "vuex": "2.1.2"
