--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "private": true,
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-loader": "6.3.1",
     "bootstrap-vue": "^0.9.2",
     "devour-client": "^1.4.1",
