--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "devour-client": "^1.4.1",
     "format": "0.2.2",
     "inflection": "^1.12.0",
+    "moment": "^2.18.1",
     "node-sass": "^4.5.0",
     "nuxt": "0.9.6",
     "sass-loader": "^6.0.0",
