--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "inflection": "^1.12.0",
     "moment": "^2.18.1",
     "node-sass": "^4.5.0",
+    "numeral": "^2.0.6",
     "nuxt": "0.9.6",
     "sass-loader": "^6.0.0",
     "underscore": "^1.8.3",
